--- a/about.html
+++ b/about.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS only -->
+    <meta
+      name="description"
+      content="Galery of Front-end projects by developer Diana Ro. Sites made using html, css, javascript, bootstrap. All web-page project have responsive design. Contact to devepoler to order personal site for you."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
-    <title>About [Your name]</title>
+    <link rel="stylesheet" href="/style.css" />
+    <title>
+      About projects from front-end developer Diana Ro and contact information
+    </title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
@@ -59,21 +63,21 @@
         <div class="col-sm-4">
           <img
             src="images/yoga.png"
-            alt="SheCodesLogo"
+            alt="Yoga site appearance"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/weather.png"
-            alt="SheCodesLogo"
+            alt="weatherApp appearance"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="images/yogurt.png"
-            alt="SheCodesLogo"
+            alt="yogurt site appearance"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
@@ -81,7 +85,13 @@
     </div>
     <div id="contact" class="contactSection">
       <h2>📮 Contact me</h2>
-      <a href="mailto:rodi@pl.com" class="email-link"> rodi@pl.com </a>
+      <a
+        href="mailto:rodi@pl.com"
+        class="email-link"
+        title="send mail to rodi@pl.com"
+      >
+        rodi@pl.com
+      </a>
     </div>
   </body>
 </html>
