--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Diana Ro</title>
-    <!-- CSS only -->
+    <title>Front-end developer Diana Ro</title>
+    <meta
+      name="description"
+      content="Main works of Front-end developer Diana Ro. Sites, aplication, design"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <!-- JavaScript Bundle with Popper -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
@@ -51,13 +54,19 @@
 
     <h3><small>PL</small> Front-end developer, based in Poland</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="contacts"
+        >Contact me</a
+      >
+      <a href="about.html" class="about-link" title="About page">About me</a>
     </div>
     <div class="container projects">
       <div class="row projectSection">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid" />
+          <img
+            src="images/yoga.png"
+            alt="Yoga site appearance"
+            class="img-fluid"
+          />
         </div>
         <div class="col-md-6">
           <h2>Yoga app</h2>
@@ -68,7 +77,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a class="projectBtn" href="#"> Launch Yoga App</a>
+            <a class="projectBtn" href="#" title="Launch Yoga App">
+              Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -82,16 +93,26 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5 mb-5">
-            <a class="projectBtn" href="#"> Launch Weather app</a>
+            <a class="projectBtn" href="#" title="Launch Weather app">
+              Launch Weather app</a
+            >
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid" />
+          <img
+            src="images/weather.png"
+            alt="weatherApp appearance"
+            class="img-fluid"
+          />
         </div>
       </div>
       <div class="row projectSection">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid" />
+          <img
+            src="images/yogurt.png"
+            alt="yogurt site appearance"
+            class="img-fluid"
+          />
         </div>
         <div class="col-md-6">
           <h2>Yogurt app</h2>
@@ -102,7 +123,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a class="projectBtn" href="#"> Launch Yogurt app</a>
+            <a class="projectBtn" href="#" title="Launch Yogurt app">
+              Launch Yogurt app</a
+            >
           </div>
         </div>
       </div>
