--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Diana Ro</a>
+        <a class="navbar-brand" href="/index.html" title="Homepage">Diana Ro</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,9 +41,22 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            <a class="nav-link active" href="about.html">About me</a>
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a
+              class="nav-link"
+              aria-current="page"
+              title="Homepage"
+              href="/index.html"
+              >Home</a
+            >
+            <a class="nav-link active" href="/about.html" title="About Diana Ro"
+              >About me</a
+            >
+            <a
+              class="nav-link"
+              href="/about.html#contact"
+              title="Contact Diana Ro"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
@@ -62,21 +75,21 @@
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             alt="Yoga site appearance"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             alt="weatherApp appearance"
             class="img-fluid p-2 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             alt="yogurt site appearance"
             class="img-fluid p-2 shadow rounded"
           />
@@ -88,7 +101,7 @@
       <a
         href="mailto:rodi@pl.com"
         class="email-link"
-        title="send mail to rodi@pl.com"
+        title="Send mail to rodi@pl.com"
       >
         rodi@pl.com
       </a>
