--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Front-end developer Diana Ro</title>
     <meta
       name="description"
-      content="Main works of Front-end developer Diana Ro. Sites, aplication, design"
+      content="Diana Ro is a front-end developer based in Poland, check out his projects and contact him for job inquiries. Main works of Front-end developer Diana Ro. Sites, aplication, design"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -26,7 +26,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Diana Ro</a>
+        <a class="navbar-brand" href="/index.html" title="Homepage">Diana Ro</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,11 +40,22 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html"
+            <a
+              class="nav-link active"
+              aria-current="page"
+              title="Homepage"
+              href="/index.html"
               >Home</a
             >
-            <a class="nav-link" href="about.html">About me</a>
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a class="nav-link" href="/about.html" title="About Diana Ro"
+              >About me</a
+            >
+            <a
+              class="nav-link"
+              href="/about.html#contact"
+              title="Contact Diana Ro"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
@@ -54,16 +65,16 @@
 
     <h3><small>PL</small> Front-end developer, based in Poland</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link" title="contacts"
+      <a href="/about.html#contact" class="contact-link" title="Contacts"
         >Contact me</a
       >
-      <a href="about.html" class="about-link" title="About page">About me</a>
+      <a href="/about.html" class="about-link" title="About page">About me</a>
     </div>
     <div class="container projects">
       <div class="row projectSection">
         <div class="col-md-6">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             alt="Yoga site appearance"
             class="img-fluid"
           />
@@ -100,7 +111,7 @@
         </div>
         <div class="col-md-6">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             alt="weatherApp appearance"
             class="img-fluid"
           />
@@ -109,7 +120,7 @@
       <div class="row projectSection">
         <div class="col-md-6">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             alt="yogurt site appearance"
             class="img-fluid"
           />
